fix(select): fix dropdown z-index
Refs CMDB_DISCOVERY-1026

--- a/bricks/form/src/select/index.shadow.css
+++ b/bricks/form/src/select/index.shadow.css
@@ -203,6 +203,10 @@
 }
 
 /* dropdown */
+.select-dropdown-popup::part(popup) {
+  z-index: 1050;
+}
+
 .select-dropdown {
   line-height: 1.5715;
   padding: 2px;
